create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4575,6 +4575,9 @@ section.lazy-placeholder:after {
     margin: 1rem 0 0 0;
   }
 }
+.cid-rU9CzVGN73 P {
+  text-align: left;
+}
 .cid-rRpiIrNXIy {
   padding-top: 30px;
   padding-bottom: 30px;
