create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4566,7 +4566,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rU9CzVGN73 P {
-  text-align: left;
+  text-align: right;
 }
 .cid-rUnCKsq4w6 {
   padding-top: 30px;
