--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4491,7 +4491,7 @@ section.lazy-placeholder:after {
 }
 .cid-rRASgDfcg8 .card-box {
   padding: 2rem;
-  background-color: #f7ed4a;
+  background-color: #efefef;
 }
 .cid-rRASgDfcg8 h4 {
   font-weight: 500;
@@ -4524,7 +4524,7 @@ section.lazy-placeholder:after {
 .cid-rUX0ckZzky {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #ffffff;
+  background-color: #073b4c;
 }
 .cid-rUX0ckZzky .card-img {
   background-color: #fff;
