--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8067,6 +8067,24 @@ section.lazy-placeholder:after {
 .cid-rTHUBCAc3D .card-title {
   color: #efefef;
 }
+.cid-rW9j1kQG0z {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rW9j1kQG0z .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rW9j1kQG0z .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rW9j1kQG0z .mbr-text {
+  color: #073b4c;
+}
 .cid-rUnCKsq4w6 {
   padding-top: 30px;
   padding-bottom: 30px;
