create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -751,6 +751,29 @@ section.lazy-placeholder:after {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-rWiYQZGOcN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #073b4c;
+}
+.cid-rWiYQZGOcN .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rWiYQZGOcN .section-text {
+  padding: 2rem 0;
+}
+.cid-rWiYQZGOcN .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rWiYQZGOcN .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-rUnCKsq4w6 {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -6638,6 +6661,24 @@ section.lazy-placeholder:after {
 .cid-rU0Eiavedh .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
+}
+.cid-rWiWatM2w3 {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rWiWatM2w3 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rWiWatM2w3 .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rWiWatM2w3 .mbr-text {
+  color: #767676;
 }
 .cid-rUnCKsq4w6 {
   padding-top: 30px;
